# EDU-platform

./: .env.example  .gitignore  AGENTS.md  README.md  REFACTOR_PLAN.md  demo-chat-clay-blue.html  demo-chat-current.html  demo-chat-warm-orange.html  demo-style-matching.html  dev.sh
apps/api/: alembic.ini  pyproject.toml  reset_teacher_password.py  seed_admin.py  seed_default_prompt.py  update_admin_username.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  60cf26d1543f_add_system_configs_table.py
apps/api/app/: config.py  main.py
apps/api/app/admin/: __init__.py  llm_routes.py  routes.py  routes_impl.py
apps/api/app/auth/: __init__.py  deps.py  routes.py  security.py
apps/api/app/chat/: __init__.py  routes.py  routes_impl.py
apps/api/app/classes/: __init__.py  routes.py
apps/api/app/db/: base.py
apps/api/app/llm/: __init__.py  provider.py  runtime_settings.py
apps/api/app/models/: __init__.py  models.py
apps/api/app/prompts/: __init__.py  routes.py
apps/api/app/schemas/: admin.py  auth.py  chat.py  classes.py  common.py  exports.py  prompts.py
apps/api/app/teacher/: __init__.py  routes.py
apps/api/tests/: conftest.py  test_admin.py  test_auth.py  test_chat.py  test_classes.py  test_health.py  test_security.py
apps/web/: .eslintrc.json  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.setup.ts
apps/worker/: pyproject.toml
deploy/: docker-compose.yml
docs/plans/: 2026-01-29-auth-unification.md  2026-02-01-fix-llm-settings-and-tests.md  (+1 more)
(+104 files in other folders)
